--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_BASE_URL = 'https://ec2-100-25-138-89.compute-1.amazonaws.com:8000'
+REACT_APP_API_BASE_URL = 'http://52.23.245.135:8000'
